--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@
   --additional-bg-cl: #ffffff;
   --hero-bg-cl: #2f303a;
   --footer-soc-bgcl: rgba(255, 255, 255, 0.1);
+  --active-cards-bg: rgba(33, 150, 243, 0.9);
+
+
 
   /*text*/
   --main-txt-cl: #212121;
@@ -21,11 +24,18 @@
   --main-bt-act: #188ce8;
   --icons-cl: #afb1b8;
 
+  --close-btn-border: rgba(0, 0, 0, 0.1);
   --border-cl: #ececec;
 
   /*mesh properties*/
   --items: 3;
   --indent: 30px;
+
+  /* animation */
+ /* --anim: transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+
 }
 
 /* reset */
@@ -110,6 +120,10 @@ body {
   gap: 50px;
 }
 
+.nav-item{
+  position: relative;
+}
+
 .nav-link {
   display: block;
   padding-top: 32px;
@@ -121,6 +135,10 @@ body {
 
   text-decoration: none;
   color: currentColor;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
@@ -129,6 +147,19 @@ body {
 }
 .current {
   color: var(--active-link-txt);
+}
+
+.current::after{
+  content: "";
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+  height: 4px;
+  background-color: var(--active-link-txt);
+  border-radius: 2px;
 }
 
 .contacts-list {
@@ -152,10 +183,18 @@ body {
   line-height: calc(16.41 / 14);
 
   color: var(--secondary-txt-cl);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-icon {
   fill: none;
   stroke: var(--secondary-txt-cl);
+
+  transition-property: stroke;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-link:hover,
@@ -206,6 +245,10 @@ body {
   text-decoration: none;
 
   color: var(--additional-txt-cl);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link:hover,
 .link:focus {
@@ -220,6 +263,10 @@ body {
   text-decoration: none;
 
   color: var(--address-link-cl);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list:not(:last-child) {
@@ -256,6 +303,10 @@ body {
   height: 44px;
   border-radius: 50%;
   background-color: var(--footer-soc-bgcl);
+
+  transition-property: background-color ;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .soc-icon {
@@ -320,6 +371,10 @@ body {
   color: var(--additional-txt-cl);
   background-color: var(--active-link-txt);
   cursor: pointer;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover,
@@ -419,6 +474,33 @@ img {
   flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 }
 
+.act-thumb{
+  position: relative;
+}
+
+.act-overlay{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+
+  width: 100%;
+  padding: 27px 0;
+
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)) ;
+}
+
+.act-desc{
+  font-weight: 700;
+  font-size: 14px;
+  line-height: calc(16/14);
+  text-transform: uppercase;
+
+  color: var(--additional-txt-cl);
+}
+
+
 .text {
   font-size: 14px;
   line-height: calc(24 / 14);
@@ -489,9 +571,16 @@ img {
   height: 44px;
   border-radius: 50%;
   background-color: var(--additional-txt-cl);
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .socials-icon {
   fill: var(--icons-cl);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-link:hover,
@@ -518,10 +607,18 @@ img {
   height: 92px;
   border: 1px solid var(--icons-cl);
   border-radius: 4px;
+
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
 .client-icon {
   fill: var(--icons-cl);
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover,
@@ -567,6 +664,11 @@ img {
 
   border: transparent;
   border-radius: 4px;
+  cursor: pointer;
+
+  transition-property: color, background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -575,9 +677,8 @@ img {
   background-color: var(--active-link-txt);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  cursor: pointer;
-}
+
+  }
 
 /* gallery */
 .gallery {
@@ -593,6 +694,42 @@ img {
   flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 
   background-color: var(--additional-bg-cl);
+}
+
+.thumb{
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+
+  width: 100%;
+  height: 100%;
+  padding: 64px 23px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+transition-property: transform;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  background-color: var(--active-cards-bg);
+}
+
+.gallery-card:hover .overlay{
+  transform: translateY(0);
+}
+
+.overlay-desc{
+  font-size: 18px;
+  line-height: calc(28/18);
+  color: var(--additional-txt-cl);
 }
 
 .card-wrapper {
@@ -624,8 +761,77 @@ img {
   text-decoration: none;
 }
 
+.wrap{
+transition-property: box-shadow;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
 .gallery-link:hover .wrap,
 .gallery-link:focus .wrap {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+/**
+  |============================
+  | Modal Window
+  |============================
+*/
+
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition-property: visibility, opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.backdrop.is-hidden{
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal{
+  width: 528px;
+  height: 581px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+
+  background-color: var(--additional-bg-cl);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-btn{
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  width: 30px;
+  height: 30px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 6px;
+
+  border-radius: 50%;
+  border: 1px solid var(--close-btn-border);
+  cursor: pointer;
+
 }
