--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,8 @@ body {
 .logo {
   margin-right: 93px;
   display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 
   font-family: var(--secondary-font);
   font-size: 26px;
@@ -153,7 +155,7 @@ body {
   content: "";
 
   position: absolute;
-  bottom: 0;
+  bottom: -1.5%;
   left: 0;
 
   width: 100%;
@@ -484,9 +486,10 @@ img {
   left: 0;
   display: flex;
   justify-content: center;
-
+  align-items: center;
   width: 100%;
-  padding: 27px 0;
+  height: 70px;
+
 
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)) ;
 }
@@ -726,6 +729,10 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(0);
 }
 
+.gallery-link:focus .overlay{
+  transform: translateY(0);
+}
+
 .overlay-desc{
   font-size: 18px;
   line-height: calc(28/18);
@@ -759,6 +766,13 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 .gallery-link {
   text-decoration: none;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+
+transition-property: box-shadow;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .wrap{
